feat(installer): install arrow + community extensions by default (cross-index JOINs in the REPL)
The REPL assembly contains no JOIN engine, and the launcher's 'java -jar'
ignored lib/ entirely — so a fresh install could not run cross-index
JOINs at all, and no amount of jar-dropping could fix it.

install.sh now:
- launches via 'java -cp "<assembly>:lib/*" app.softnetwork.elastic.client.Cli'
  (assembly first so it wins any classpath conflict) with the Arrow
  --add-opens flags on Java 9+
- for SoftClient4ES >= 0.20 on Java 11+, bootstraps the coursier launcher
  and resolves softclient4es-arrow-extensions + community-extensions with
  their FULL dependency closure (~277 jars incl. Arrow/DuckDB) into lib/
- --no-extensions flag for a minimal install; VERSION and the summary
  report what was installed

documentation/client/repl.md (the README the installer ships) gains an
Extensions section: default behaviour, manual 'cs fetch' recipe for
existing installs, the thin-jar warning, and the Java 11+ constraint.

Verified end-to-end against live ES 8.18.3: fresh install, CREATE/INSERT
fixtures, SELECT…JOIN returns correct INNER JOIN rows through the REPL
(with softclient4es-arrow#125 applied; see that PR for the extension
priority collision this uncovered).

install.ps1 parity is a follow-up.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>